--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/svg+xml" href="/vite.svg">
     <link rel="manifest" href="manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite + React + TS</title>
-    <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="apple-touch-startup-image" href="media/apple-splash-2048-2732.jpg" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
     <link rel="apple-touch-startup-image" href="media/apple-splash-2732-2048.jpg" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
     <link rel="apple-touch-startup-image" href="media/apple-splash-1668-2388.jpg" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
@@ -37,6 +35,13 @@
     <link rel="apple-touch-startup-image" href="media/apple-splash-1334-750.jpg" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
     <link rel="apple-touch-startup-image" href="media/apple-splash-640-1136.jpg" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
     <link rel="apple-touch-startup-image" href="media/apple-splash-1136-640.jpg" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
+    <link rel="icon" type="image/png" sizes="196x196" href="media/favicon-196.png">
+    <meta name="msapplication-square70x70logo" content="media/mstile-icon-128.png">
+    <meta name="msapplication-square150x150logo" content="media/mstile-icon-270.png">
+    <meta name="msapplication-square310x310logo" content="media/mstile-icon-558.png">
+    <meta name="msapplication-wide310x150logo" content="media/mstile-icon-558-270.png">
+    <link rel="apple-touch-icon" href="media/apple-icon-180.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
   </head>
   <body>
     <div id="root"></div>
