--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="manifest" href="manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color">
     <meta name="description" content="This app allows you to create a quickview on a favourite Wienerlinien Connection">
     <title>Vite + React + TS</title>
     <link rel="icon" type="image/png" sizes="196x196" href="media/favicon-196.png">
