--- a/index.html
+++ b/index.html
@@ -6,9 +6,26 @@
     <link rel="stylesheet" href="./src/index.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Parada Mia</title>
+    <link rel="manifest" href="/src/manifest.json"/>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="ParadaMia">
+    <link rel="apple-touch-icon" href="/src/assets/icons/57x57.svg" sizes="57x57">
+    <link rel="apple-touch-icon" href="/src/assets/icons/60x60.svg" sizes="60x60">
+    <link rel="apple-touch-icon" href="/src/assets/icons/72x72.svg" sizes="72x72">
+    <link rel="apple-touch-icon" href="/src/assets/icons/76x76.svg" sizes="76x76">
+    <link rel="apple-touch-icon" href="/src/assets/icons/114x114.svg" sizes="114x114">
+    <link rel="apple-touch-icon" href="/src/assets/icons/120x120.svg" sizes="120x120">
+    <link rel="apple-touch-icon" href="/src/assets/icons/144x144.svg" sizes="144x144">
+    <link rel="apple-touch-icon" href="/src/assets/icons/152x152.svg" sizes="152x152">
+    <link rel="apple-touch-icon" href="/src/assets/icons/180x180.svg" sizes="180x180">
+    <meta name="msapplication-TileImage" content="/src/images/icons/144x144.svg">
+    <meta name="msapplication-TileColor" content="#fff">
+    <meta name="theme-color" content="#2f51b5">
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <div>Icons made from <a href="https://www.onlinewebfonts.com/icon">svg icons</a>is licensed by CC BY 4.0</div>
   </body>
 </html>
